# daily-school

./: README.md
backend/: alembic.ini  app.py  compose-db.yml  make_db.sh  populate_db.py  prestart.sh  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 7238233fd470_init_db.py  a5727d3f0c20_init_db.py  cf82b33ceaeb_init_db.py  e2002436a62b_init_db.py  ed865631c4eb_init_db.py
backend/app/: api.py  backend_pre_start.py  deps.py  main.py
backend/app/api/: api.py
backend/app/api/endpoints/: auth.py  group.py  groups.py  schedule.py  teacher.py  teachers.py
backend/app/core/: auth.py  config.py  security.py
backend/app/crud/: __init__.py  base.py  crud_group.py  crud_lesson_time.py  crud_room.py  crud_schedule.py  crud_student.py  crud_student_marks.py  crud_subject.py  crud_teacher.py  crud_week.py  crud_week_number.py
backend/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/models/: __init__.py  group.py  group_to_student.py  group_to_teacher.py  lesson_time.py  room.py  schedule.py  student.py  student_marks.py  subject.py  teacher.py  week.py  week_number.py
backend/app/schemas/: __init__.py  group.py  lesson_time.py  person.py  room.py  schedule.py  student.py  student_marks.py  subject.py  teacher.py  token.py  user.py  week.py  week_number.py
backend/models/: student.py
backend/schemas/: person.py  student.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js  store.js
new-frontend/: package-lock.json  package.json  tsconfig.json
(+161 files in other folders)
